temp/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UNIVERSITY OF WASHINGTON</fullName>
                </value>
                <value>
                    <fullName>UNIVERSITY OF SOUTH CAROLINA</fullName>
                </value>
                <value>
                    <fullName>EAST CAROLINA UNIVERSITY</fullName>
                </value>
                <value>
                    <fullName>ABBOTT HEALTH</fullName>
                </value>
                <value>
                    <fullName>WASHINGTON STATE UNIVERSITY</fullName>
                </value>
                <value>
                    <fullName>TARLETON STATE UNIVERSITY</fullName>
                </value>
                <value>
                    <fullName>TORONTO PEARSON AIRPORT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atlas_Segment__c</fullName>
        <label>Atlas Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GROCERY</fullName>
                </value>
                <value>
                    <fullName>ONST&amp;RTL</fullName>
                </value>
                <value>
                    <fullName>TRVL&amp;LSR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atlas_SubSegment__c</fullName>
        <label>Atlas SubSegment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Casino/Gaming</fullName>
                </value>
                <value>
                    <fullName>College &amp; University</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Travel Plaza</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SBUX Licensee</fullName>
                </value>
                <value>
                    <fullName>SBUX Licensed Store</fullName>
                    <default>true</default>
                    <label>SBUX Licensed Store</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                    <default>true</default>
                    <label>Store</label>
                </value>
                <value>
                    <fullName>Licensee</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Atlas_Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAFES</fullName>
                </value>
                <value>
                    <fullName>HILTON</fullName>
                </value>
                <value>
                    <fullName>HYATT</fullName>
                </value>
                <value>
                    <fullName>MARRIOTT</fullName>
                </value>
                <value>
                    <fullName>MILITARY</fullName>
                </value>
                <value>
                    <fullName>MORRISONS</fullName>
                </value>
                <value>
                    <fullName>STARWOOD</fullName>
                </value>
                <value>
                    <fullName>WESTIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indoor_Menu_Type_1_Panel_1_2_3__c</fullName>
        <inlineHelpText>Please note the following when selecting menu type options
Indoor Core size: 22.4375&quot; x 27.5&quot;
Indoor Doppio size: 19.4375&quot; x 15.25&quot;</inlineHelpText>
        <label>Indoor Menu Type 1 (Panel 1, 2, 3)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doppio</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Short</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licensee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Licensee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licensee</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Menu_1_Qty_of_sets_needed__c</fullName>
        <inlineHelpText>1 set includes menu panels 1, 2 and 3</inlineHelpText>
        <label>Menu 1 Qty (# of sets needed)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Menu_Board_Program__c</fullName>
        <inlineHelpText>Insert Regionally Priced
Web2Print</inlineHelpText>
        <label>Menu Board Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert - Regionally Priced</fullName>
                </value>
                <value>
                    <fullName>Web2Print-not Regionally Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership_Group__c</fullName>
        <label>Ownership Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MARRIOTT INTERNATIONAL</fullName>
                </value>
                <value>
                    <fullName>HILTON HOTELS CORPORATION</fullName>
                </value>
                <value>
                    <fullName>STATION CASINOS</fullName>
                </value>
                <value>
                    <fullName>CJ WASHINGTON STREET LLC</fullName>
                </value>
                <value>
                    <fullName>CAESARS ENTERTAINMENT</fullName>
                </value>
                <value>
                    <fullName>MGM MIRAGE OPERATIONS INC</fullName>
                </value>
                <value>
                    <fullName>ELKO ACQUISITIONS LLC</fullName>
                </value>
                <value>
                    <fullName>DAVIDSON HOTEL COMPANY</fullName>
                </value>
                <value>
                    <fullName>GENERATION 2000</fullName>
                </value>
                <value>
                    <fullName>Values to be determined</fullName>
                </value>
                <value>
                    <fullName>75 EAST STATE LLC</fullName>
                </value>
                <value>
                    <fullName>HAZENS INVESTMENT, LLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Region__c</fullName>
        <label>Pricing Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-Region 1</fullName>
                </value>
                <value>
                    <fullName>2-Region 2</fullName>
                </value>
                <value>
                    <fullName>3-Region 3</fullName>
                </value>
                <value>
                    <fullName>4-Region 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LODGING</fullName>
                </value>
                <value>
                    <fullName>ONSITE</fullName>
                </value>
                <value>
                    <fullName>RECREATION</fullName>
                </value>
                <value>
                    <fullName>RETAIL</fullName>
                </value>
                <value>
                    <fullName>TRAVEL</fullName>
                </value>
                <value>
                    <fullName>GROCERY</fullName>
                </value>
                <value>
                    <fullName>OTHER RETAILERS</fullName>
                </value>
                <value>
                    <fullName>RESTAURANT</fullName>
                </value>
                <value>
                    <fullName>PLACEHOLDER</fullName>
                </value>
                <value>
                    <fullName>INTERNAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store_Type__c</fullName>
        <label>Store Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cafe</fullName>
                </value>
                <value>
                    <fullName>Cart</fullName>
                </value>
                <value>
                    <fullName>Coffee Stand</fullName>
                </value>
                <value>
                    <fullName>Drive Thru</fullName>
                </value>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Kiosk</fullName>
                </value>
                <value>
                    <fullName>Mobile Truck</fullName>
                </value>
                <value>
                    <fullName>Reserve Bar</fullName>
                </value>
                <value>
                    <fullName>Reserve Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <label>Sub Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIRLINE</fullName>
                </value>
                <value>
                    <fullName>AIRPORT</fullName>
                </value>
                <value>
                    <fullName>ARENA / STADIUM</fullName>
                </value>
                <value>
                    <fullName>CHARTER</fullName>
                </value>
                <value>
                    <fullName>CLUB</fullName>
                </value>
                <value>
                    <fullName>CONVENTION CENTER</fullName>
                </value>
                <value>
                    <fullName>COFFEE HOUSE</fullName>
                </value>
                <value>
                    <fullName>CRUISE LINE</fullName>
                </value>
                <value>
                    <fullName>CONVENIENCE STORE</fullName>
                </value>
                <value>
                    <fullName>CATERING</fullName>
                </value>
                <value>
                    <fullName>COLLEGE/UNIVERSITY/TECH DINING</fullName>
                </value>
                <value>
                    <fullName>DRUG</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTOR</fullName>
                </value>
                <value>
                    <fullName>E-COMMERCE</fullName>
                </value>
                <value>
                    <fullName>ECONOMY</fullName>
                </value>
                <value>
                    <fullName>ECOMMERCE</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE DINING</fullName>
                </value>
                <value>
                    <fullName>EQUIPMENT SERVICE</fullName>
                </value>
                <value>
                    <fullName>FRESHBREW</fullName>
                </value>
                <value>
                    <fullName>FULL SERVICE - FINE DINING</fullName>
                </value>
                <value>
                    <fullName>FOOD</fullName>
                </value>
                <value>
                    <fullName>FULL SERVICE - CASUAL DINING</fullName>
                </value>
                <value>
                    <fullName>FULL SERVICE - FAMILY DINING</fullName>
                </value>
                <value>
                    <fullName>GAMING WITH LODGING</fullName>
                </value>
                <value>
                    <fullName>GENERAL MERCHANDISE</fullName>
                </value>
                <value>
                    <fullName>GIFT PACK</fullName>
                </value>
                <value>
                    <fullName>GOLF</fullName>
                </value>
                <value>
                    <fullName>GOVERNMENT DINING</fullName>
                </value>
                <value>
                    <fullName>HEALTHCARE - LONG TERM</fullName>
                </value>
                <value>
                    <fullName>HEALTHCARE - SHORT TERM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>